alignment fix and issues resolved

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,19 +6,19 @@
 }
 
 body {
-    background: #080808;
+    background: #120d0d;
     color: #fff;
 }
 
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(/download.jpeg);
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
-    padding-top: 0;
+    padding-top: 80px;
+    margin-top: 0;
 }
 
 .container {
@@ -32,6 +32,13 @@ nav {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: #000000;
+    padding: 10px 8%;
+    z-index: 100;
 }
 
 .logo {
@@ -156,12 +163,12 @@ nav ul li a:hover::after {
 width: 100%;
 } */
 .tab-links.active-link::after {
-    width: 50%;
+    width: 100%;
 }
 
 .tab-contents ul li {
     list-style: none;
-    margin: 10px 0;
+    margin: 5px 0;
 }
 
 .tab-contents ul li span {
